--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RoscoeRide</string>
+    <string name="app_name">Vovo Ride</string>
     <string name="tag_send">send</string>
 
     <string name="title_activity_wan_maps">Map</string>
